# volga-dnepr-test

./: .gitignore  QtyLines.dcu  QtyLines.dfm  QtyLines.pas  QtyLines.~dfm  QtyLines.~pas  Test.cfg  Test.dof  Test.dpr  Test.dsk  Test.skincfg  Test.~dpr  fileContext.dfm  fileContext.pas  frmMain.dcu  frmMain.dfm  frmMain.pas  frmMain.~dfm  frmMain.~pas  progBar.dfm  progBar.pas  progBar.~pas  pyproject.toml
Delphi7/: Test.dof  Test.dsk  fileContext.dfm  frmMain.pas
Python/Task1/: main.py  pyproject.toml
Python/Task1/Expl/: Задание.txt
Python/Task1/Задание/: ILVD23.CYC
Python/Task2/: main.py  pyproject.toml
Python/Task2/Expl/: flight_data.txt
