[tool.poetry]
name = "volga-dnepr-test"
version = "0.1.0"
description = ""
authors = ["Andrey Yudin <uandrew1965@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
