[tool.poetry]
name = "task1"
version = "0.1.0"
description = ""
authors = ["Andrey Yudin <yudin_ag@ursip.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
scikit-image = "^0.21.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
pyqt5 = "^5.15.9"
spyder = "^5.4.4"
pytest = "^7.4.0"
hypothesis = "^6.82.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
